--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ android {
     lintOptions {
         checkReleaseBuilds false
     }
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.eletronica.ordenesservicioapp"
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdkVersion 21 
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -19,6 +19,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 }
 
@@ -36,10 +40,16 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
+    /*implementation 'com.github.lecho:hellocharts-android:v1.5.8'*/
+    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation 'com.github.mazenrashed:Printooth:1.2.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0'
+    implementation 'com.google.zxing:core:3.3.0'
+    /*implementation 'androidx.core:core:1.0.1'*/
 
 
 }
