--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,26 +4,28 @@
     package="com.eletronica.ordenesservicioapp">
 
     <uses-permission android:name="android.permission.INTERNET" /> <!-- <uses-permission android:name="android.permission.CAMERA" /> -->
-    <uses-permission
-        android:name="android.permission.ACCESS_NETWORK_STATE"
-        android:maxSdkVersion="19" />
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="19" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
-        tools:replace="android:icon"
         android:allowBackup="true"
         android:hardwareAccelerated="false"
-        android:largeHeap="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon">
+        <activity android:name=".NuevaConfiguracion"></activity>
+        <activity android:name=".NuevoPuntoVenta" />
+        <activity android:name=".PuntosVentas" />
         <activity
             android:name=".InicioSesion"
             android:screenOrientation="portrait" />
@@ -55,6 +57,7 @@
             android:name=".Menu"
             android:screenOrientation="portrait" />
         <activity android:name=".Clientes" />
+        <activity android:name=".ListaBluetoohtActivity" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
